--- a/staff/ana-delrio/fullstack/app/src/index.css
+++ b/staff/ana-delrio/fullstack/app/src/index.css
@@ -22,6 +22,12 @@ html, body {
   flex-direction: column;
   align-items: center;
   gap: 5px;
+  padding: 1rem;
+}
+
+.container--horizontal {
+  flex-direction: row;
+  justify-content: center;
 }
 
 .form {
