--- a/staff/josem-cembrano/fullstack/app/src/index.css
+++ b/staff/josem-cembrano/fullstack/app/src/index.css
@@ -1,3 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer components {
+  .imput {
+    @apply border-[2px] border-solid border-black p-[5px]
+  }
+  .button {
+    @apply border-[2px] border-solid border-black p-[5px] bg-[transparent] font-bold;
+  }
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 /* resets */
 * {
@@ -30,18 +44,6 @@ html, body {
 }
 
 .label {
-  font-weight: bold;
-}
-
-.input {
-  border: 2px solid black;
-  padding: 5px;
-}
-
-.button {
-  border: 2px solid black;
-  padding: 5px;
-  background-color: transparent;
   font-weight: bold;
 }
 
