--- a/staff/abel-prieto/PROYECT/HiInit/src/index.css
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.css
@@ -12,25 +12,18 @@ p {
   margin-bottom: 0px;
 }
 
-.guest {
-  color: rgb(255, 128, 55);
-  font-weight: bold;
-}
-
 a {
   color: white;
   text-decoration: none;
 }
-
 a:hover {
   color: grey;
 }
-
 a:active {
   color: orange;
 }
 
-.loading {
+.container {
   display: block;
   background-color: #1e252e;
   border-style: solid;
@@ -40,7 +33,7 @@ a:active {
   padding-top: 15px;
 }
 
-.container {
+.page {
   overflow-y: auto;
   height: 100%;
 }
@@ -50,7 +43,6 @@ a:active {
   font-family: monospace;
   text-align: left;
 }
-
 .tittle-logo p {
   margin: 0;
 }
@@ -64,15 +56,20 @@ a:active {
   margin-bottom: 5px;
 }
 
-.field-order {
+.command-bar {
   display: flex;
   align-items: center;
 }
 
-.field-order input {
-  margin: 0 10px;
-  border: none;
+.command-bar input {
+  padding-top: 18px;
+  margin: 10px;
+  outline: none;
+  border: 0 solid;
   color: white;
+  width: auto;
+  flex-grow: 1;
+  caret-color: transparent;
 }
 
 .sign {
@@ -81,12 +78,8 @@ a:active {
   margin-bottom: 5px;
 }
 
-.command-input {
-  display: inline-block;
-  border: none;
-  outline: none;
-  width: 20ch;
-  padding-top: 20px;
+.user-guest {
+  color: #ff8037;
 }
 
 ::-webkit-scrollbar {
