--- a/staff/abel-prieto/PROYECT/HiInit/src/index.sass
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.sass
@@ -19,7 +19,9 @@ a
   &:active
     color: orange
 
-.loading
+// GENERAL
+
+.container
   display: block
   background-color: #1e252e
   border-style: solid
@@ -28,9 +30,11 @@ a
   padding-left: 20px
   padding-top: 15px
 
-.container
+.page
   overflow-y: auto
   height: 100%
+
+// INITIAL PAGE
 
 .tittle-logo
   white-space: pre
@@ -47,19 +51,29 @@ a
   display: block
   margin-bottom: 5px
 
-.field-order
+.command-bar
   display: flex
   align-items: center
 
-.field-order input
-  margin: 0 10px
-  border: none
+.command-bar input
+  padding-top: 18px
+  margin: 10px
+  outline: none
+  border: 0 solid
   color: white
+  width: auto
+  flex-grow: 1
+  caret-color: transparent
 
 .sign
   align-items: end
   text-align: left
   margin-bottom: 5px
+
+// USER'S TYPE
+
+.user-guest
+  color: #ff8037
 
 ::-webkit-scrollbar
   width: 10px
