add Credentials and Destktop component .jsx

--- a/staff/abel-prieto/PROYECT/HiInit/src/index.sass
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.sass
@@ -3,6 +3,8 @@
   background-color: #1e252e
   font-family: Hack,monospace
 
+// ELEMENTS
+
 body
   margin: 5px
 p
@@ -29,8 +31,6 @@ a
   border-radius: 0.25rem
   padding-left: 20px
   padding-top: 15px
-
-.page
   overflow-y: auto
   height: 100%
 
