--- a/staff/josem-cembrano/fullstack/app/src/index.css
+++ b/staff/josem-cembrano/fullstack/app/src/index.css
@@ -1,17 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-@layer components {
-  .imput {
-    @apply border-[2px] border-solid border-black p-[5px]
-  }
-  .button {
-    @apply border-[2px] border-solid border-black p-[5px] bg-[transparent] font-bold;
-  }
-}
-
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 /* resets */
 * {
@@ -34,6 +20,12 @@ html, body {
   flex-direction: column;
   align-items: center;
   gap: 5px;
+  padding: 1rem;
+}
+
+.container--horizontal {
+  flex-direction: row;
+  justify-content: center;
 }
 
 .form {
@@ -44,6 +36,18 @@ html, body {
 }
 
 .label {
+  font-weight: bold;
+}
+
+.input {
+  border: 2px solid black;
+  padding: 5px;
+}
+
+.button {
+  border: 2px solid black;
+  padding: 5px;
+  background-color: transparent;
   font-weight: bold;
 }
 
@@ -88,7 +92,7 @@ html, body {
 }
 
 .posts {
-  background-color: rgb(168, 220, 255);
+  background-color: yellow;
   margin-bottom: 3rem;
 }
 
