--- a/staff/josem-cembrano/fullstack/app/src/index.sass
+++ b/staff/josem-cembrano/fullstack/app/src/index.sass
@@ -24,7 +24,12 @@ $footer-h: 3rem
     display: flex
     flex-direction: column
     align-items: center
-    gap: 5px
+    gap: 1rem
+    padding: 1rem
+
+.container--horizontal
+    flex-direction: row
+    justify-content: center
 
 .form
     display: flex
