--- a/staff/tano-aleu/fullstack/app/src/styles/index.css
+++ b/staff/tano-aleu/fullstack/app/src/styles/index.css
@@ -1,117 +1,92 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
-/* resets */
-* {
-  font-family: Inter;
-  font-size: 1rem;
-}
 
-html {
-  scroll-behavior: smooth;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-html, body {
-  margin: 0;
-}
 
-/* variables */
-/* library */
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
-}
+@layer components {
+  /* library */
 
-.form {
-  display: flex;
-  flex-direction: column;
-  max-width: 240px;
-  gap: 5px;
-}
+  .form {
+    @apply flex flex-col max-w-[240px] gap-[5px];
+  }
 
-.label {
-  font-weight: bold;
-}
+  .label {
+    @apply font-bold;
+  }
 
-.input {
-  border: 2px solid black;
-  padding: 5px;
-}
+  .input {
+    @apply border-[2px] border-solid border-black p-[5px];
+  }
 
-.button {
-  border: 2px solid black;
-  padding: 5px;
-  background-color: transparent;
-  font-weight: bold;
-}
+  .button {
+    @apply border-[2px] border-solid border-black p-[5px] bg-[transparent] font-bold;
+  }
 
-.link {
-  text-decoration: none;
-  color: black;
-}
-.link:visited {
-  color: black;
-}
-.link::before {
-  content: "[ ";
-}
-.link::after {
-  content: " ]";
-}
+  .link {
+    @apply decoration-[none] text-black visited:text-black before:content-['[_'] after:content-['_]'];
+  }
 
-/* custom compos */
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem;
-}
+  .container {
+    @apply flex flex-col items-center gap-[1rem] p-[1rem];
+  }
 
-.new-post {
-  margin-bottom: 1rem;
-}
+  .container--horizontal {
+    @apply bg-purple-400 flex-row justify-center;
+  }
 
-.post {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.post-image {
-  max-width: 320px;
-}
-.post-actions {
-  display: flex;
-  justify-content: space-between;
-  gap: 0.5rem;
-}
+  /* custom */
 
-.posts {
-  background-color: yellow;
-  margin-bottom: 3rem;
-}
+  .header {
+    @apply bg-yellow-300 flex items-center justify-between p-[.5rem];
+  }
 
-@media (min-width: 768px) {
+  .new-post {
+    @apply bg-yellow-300 mb-[1rem];
+  }
+
+  .post {
+    @apply flex flex-col items-center pb-[2rem];
+  }
+
+  .post-image {
+    @apply max-w-[220px];
+  }
+
+  .post-actions {
+    @apply flex justify-between gap-[.5rem] mt-[.5rem];
+  }
+
   .posts {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    @apply bg-purple-400 mb-[3rem] md:grid md:grid-cols-2 lg:grid-cols-3;
+  }
+
+  .footer {
+    @apply bg-yellow-300 flex flex-col justify-center items-center fixed bottom-0 w-full min-h-[3rem];
+  }
+
+  .Feedback {
+    @apply fixed top-0 w-full box-border;
+  }
+
+  .Feedback--debug {
+    @apply bg-[yellowgreen];
+  }
+
+  .Feedback--info {
+    @apply bg-[dodgerblue];
+  }
+
+  .Feedback--warn {
+    @apply bg-[gold];
+  }
+
+  .Feedback--error {
+    @apply bg-[orange];
+  }
+
+  .Feedback--fatal {
+    @apply bg-[red] text-white;
   }
 }
-@media (min-width: 1024px) {
-  .posts {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-.footer {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  min-height: 3rem;
-}
-
-/*# sourceMappingURL=index.css.map */
