--- a/staff/isabel-dominguez/project/app/src/index.css
+++ b/staff/isabel-dominguez/project/app/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -10,30 +12,29 @@ body {
   background-color: #f9f9f9;
 }
 
-.container {
-  width: 80%;
-  margin: auto;
-  overflow: hidden;
-}
-
+/* HEADER */
 header {
-  background-color: beige;
+  background-color: #b4c6d8;
   color: #333;
   padding: 20px 0;
   min-height: 80px;
 }
 
-header h1 {
+.home-header {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home-link {
   font-family: "Sofia", sans-serif;
   font-size: 48px;
   color: rosybrown;
   margin-left: 10px;
-}
-
-.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-decoration: none;
 }
 
 .search-container {
@@ -41,120 +42,187 @@ header h1 {
   align-items: center;
 }
 
-input[type="text"] {
+.search-button {
+  color: #fff;
+  background-color: rosybrown;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.search-input {
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #ccc;
   margin-right: 5px;
-  width: 300px;
+  width: 400px;
   font-size: 16px;
+  outline: none;
 }
 
-button {
-  padding: 10px 10px;
-  border: none;
-  background-color: #555;
-  color: #fff;
-  border-radius: 5px;
-  cursor: pointer;
+.search-input:focus {
+  border-color: rosybrown;
 }
 
-header nav {
-  float: right;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  margin-right: 10px;
-}
 
-header nav ul li {
-  display: inline-block;
-  margin-right: 50px;
-}
-
-.section1 {
-  background: url('../images/sect1.png') center/cover no-repeat;
-  color: #fff;
-  font-family: "Sofia", sans-serif;
-  padding: 150px 0;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.section2 h2 {
-  transition: color 0.3s ease;
-}
-
-.section2 h2:hover {
-  color: rosybrown
-}
-
-.section2 {
+/* FIRST SECTION H2*/
+.first-section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family: 'Poppins', sans-serif;
 }
 
-h2 {
-  margin: 0;
-  padding: 15px;
+.first-section h2 a {
+  color: black;
+  text-decoration: none;
 }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
+.first-section h2 {
+  transition: color 0.3s ease;
   margin: 0;
+  padding: 10px;
+}
+
+.first-section h2:hover {
+  color: #b4c6d8;
+}
+
+
+/* FIRST SECTION ICONS*/
+.icons {
+  list-style: none;
+  margin-right: 10px;
   display: flex;
 }
 
-nav ul li {
-  margin-left: 10px;
+.icons li {
+  margin-right: 30px;
 }
 
-nav ul li:first-child {
-  margin-left: 0;
+.icons li:last-child {
+  margin-right: 0;
 }
 
-#productos {
-  padding: 50px 0;
-  background-color: #fff;
+.icons button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.icons img {
+  width: 36px;
+  height: 36px;
+  border: none;
+  outline: none;
+}
+
+
+/* SECOND SECTION*/
+.second-section {
+  position: relative;
+  background: url('../images/1.jpg') center/cover no-repeat;
+  padding: 170px 0;
+}
+
+.second-section h2 {
+  color: rosybrown;
+  font-family: "Sofia", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
+
+
+/* PRODUCTS*/
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 .product {
-  width: 30%;
-  margin-right: 3%;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  padding: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  position: relative;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 10px;
+  text-align: center;
+  background-color: #fff;
+  width: 400px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
 }
 
 .product:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.product img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
+.product-image {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 10px;
+}
+
+.product-name {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.product p {
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.cart-button {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.details-button {
+  background-color: #b4c6d8;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.details-button:hover {
+  background-color: #818d9a;
 }
 
 @media (min-width: 768px) {
-  .product {
+  .products {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
 }
 
 @media (min-width: 1024px) {
-  .product {
-    display: grid;
+  .products {
     grid-template-columns: repeat(3, 1fr);
   }
 }
