--- a/staff/abel-prieto/PROYECT/HiInit/src/index.sass
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.sass
@@ -8,11 +8,11 @@
 body
   margin: 5px
 p
-  color: white
+  color: #EBDBB2
   margin-bottom: 0px
 
 a
-  color: white
+  color: #EBDBB2
   text-decoration: none
 
   &:hover
@@ -52,18 +52,30 @@ a
   margin-bottom: 5px
 
 .command-bar
-  display: flex
+  display: inline-flex
   align-items: center
 
-.command-bar input
-  padding-top: 18px
-  margin: 10px
-  outline: none
-  border: 0 solid
-  color: white
-  width: auto
-  flex-grow: 1
-  caret-color: transparent
+  input
+    margin: 10px
+    outline: none
+    border: 0 solid
+    color: white
+    width: auto
+    flex-grow: 1
+    caret-color: transparent
+
+.command-style
+  &--username
+    color: #ff8037
+
+  &--group
+    color: #18E3C8
+
+  &--user
+    color: #ff8037
+
+  &--rest
+    color: #A89984
 
 .sign
   align-items: end
@@ -72,8 +84,10 @@ a
 
 // USER'S TYPE
 
-.user-guest
-  color: #ff8037
+// .user-guest
+//   color: #ff8037
+
+// SCROLL BAR
 
 ::-webkit-scrollbar
   width: 10px
