--- a/staff/abel-prieto/PROYECT/HiInit/src/index.css
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.css
@@ -34,8 +34,8 @@ a:active {
   padding-left: 20px;
   padding-top: 15px;
   overflow-y: auto;
+  height: 100%;
   min-height: 650px;
-  height: fit-content;
 }
 
 .tittle-logo {
@@ -57,6 +57,33 @@ a:active {
   margin-bottom: 5px;
 }
 
+.fields {
+  display: flex;
+}
+
+.fields input {
+  padding: 0;
+  font-size: 100%;
+  margin: 15px;
+  outline: none;
+  border: 0 solid;
+  color: white;
+  width: auto;
+  flex-grow: 1;
+  caret-color: transparent;
+}
+
+.space-between {
+  margin-bottom: -10px;
+}
+
+.button-form {
+  color: white;
+  font-weight: 800;
+  margin-top: 15px;
+  border-radius: 5px;
+}
+
 .command-bar {
   display: inline-flex;
   align-items: center;
@@ -70,6 +97,10 @@ a:active {
   width: auto;
   flex-grow: 1;
   caret-color: transparent;
+}
+
+.command-bar p {
+  margin-top: -4px;
 }
 
 .command-style--username {
