--- a/staff/abel-prieto/PROYECT/HiInit/src/index.sass
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.sass
@@ -33,6 +33,7 @@ a
   padding-top: 15px
   overflow-y: auto
   height: 100%
+  min-height: 650px
 
 // INITIAL PAGE
 
@@ -51,6 +52,33 @@ a
   display: block
   margin-bottom: 5px
 
+// REGISTER 
+
+.fields
+  display: flex
+
+  input
+    padding: 0
+    font-size: 100%
+    margin: 15px
+    outline: none
+    border: 0 solid
+    color: white
+    width: auto
+    flex-grow: 1
+    caret-color: transparent
+
+.space-between
+  margin-bottom: -10px
+
+.button-form
+  color: white
+  font-weight: 800
+  margin-top: 15px
+  border-radius: 5px
+
+// COMMANDS
+
 .command-bar
   display: inline-flex
   align-items: center
@@ -63,6 +91,9 @@ a
     width: auto
     flex-grow: 1
     caret-color: transparent
+
+  p
+    margin-top: -4px
 
 .command-style
   &--username
