add uploadFile and Profile component

--- a/staff/abel-prieto/PROYECT/HiInit/src/index.css
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.css
@@ -16,11 +16,9 @@ a {
   color: #EBDBB2;
   text-decoration: none;
 }
-
 a:hover {
   color: grey;
 }
-
 a:active {
   color: orange;
 }
@@ -43,7 +41,6 @@ a:active {
   font-family: monospace;
   text-align: left;
 }
-
 .tittle-logo p {
   margin: 0;
 }
@@ -60,7 +57,6 @@ a:active {
 .fields {
   display: flex;
 }
-
 .fields input {
   padding: 0;
   font-size: 100%;
@@ -77,6 +73,10 @@ a:active {
   margin-bottom: -10px;
 }
 
+.command-form {
+  color: white;
+}
+
 .button-form {
   color: white;
   font-weight: 800;
@@ -88,7 +88,6 @@ a:active {
   display: inline-flex;
   align-items: center;
 }
-
 .command-bar input {
   margin: 10px;
   outline: none;
@@ -98,7 +97,6 @@ a:active {
   flex-grow: 1;
   caret-color: transparent;
 }
-
 .command-bar p {
   margin-top: -4px;
 }
@@ -106,15 +104,12 @@ a:active {
 .command-style--username {
   color: #ff8037;
 }
-
 .command-style--group {
   color: #18E3C8;
 }
-
 .command-style--user {
   color: #ff8037;
 }
-
 .command-style--rest {
   color: #A89984;
 }
