modify retirevTutorial logic in api to populate name; add first styles to Tutorial component, modify Tutorial Component to show the name of the author of the post #433

--- a/staff/anna-cuenca/project/app/src/index.css
+++ b/staff/anna-cuenca/project/app/src/index.css
@@ -90,4 +90,8 @@
   .Feedback--fatal {
     @apply bg-[red] text-white;
   }
+
+  .tutorial {
+    @apply border-2 border-solid border-gray-300 rounded-lg shadow-md p-4 mb-4;
+  }
 }
