--- a/staff/isabel-dominguez/project/app/src/index.css
+++ b/staff/isabel-dominguez/project/app/src/index.css
@@ -160,7 +160,7 @@ header {
   justify-content: center;
   padding: 20px;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1400px;
 }
 
 .product {
@@ -170,7 +170,8 @@ header {
   margin: 10px;
   text-align: center;
   background-color: #fff;
-  width: 400px;
+  width: 460px;
+  height: 580px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
 }
@@ -180,16 +181,16 @@ header {
 }
 
 .product-image {
-  width: 100px;
-  height: 100px;
+  max-width: 80%;
+  height: auto;
   margin-bottom: 10px;
 }
 
-.product-name {
-  font-size: 18px;
+.product h2 {
+  font-size: 24px;
   font-weight: bold;
   color: #333;
-  margin-bottom: 5px;
+  margin-top: 0;
 }
 
 .product p {
