--- a/staff/isabel-dominguez/project/app/src/index.css
+++ b/staff/isabel-dominguez/project/app/src/index.css
@@ -102,12 +102,10 @@ header {
 
 .logout-button {
   background-color: #b4c6d8;
-  color: white;
   border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
+  padding: 8px 8px;
+  border-radius: 11px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
 .icons a {
@@ -238,6 +236,64 @@ header {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+
+/* PRODUCT DETAILS*/
+/* .details-overlay {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 460px;
+  height: 580px;
+  padding: 15px;
+  background-color: #b4c6d8;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+} */
+
+.details-overlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 460px;
+  max-width: 90%;
+  max-height: 90vh;
+  padding: 15px;
+  background-color: rgba(180, 198, 216, 0.941);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.details-content {
+  padding: 10px;
+  text-align: left;
+}
+
+.details-content h2 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.close-button {
+  background-color: #fff;
+  color: #818d9a;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.close-button:hover {
+  background-color: #F0F0F0;
+}
+
 
 /* RECIPES*/
 .recipes-compo {
