--- a/staff/isabel-dominguez/project/app/src/index.css
+++ b/staff/isabel-dominguez/project/app/src/index.css
@@ -302,7 +302,7 @@ header {
   justify-content: center;
   padding: 20px;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1400px;
 }
 
 @media (min-width: 768px) {
@@ -320,16 +320,16 @@ header {
 }
 
 .recipe-compo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: relative;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 10px;
   text-align: center;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  padding: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  width: 460px;
+  height: 580px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
 }
 
 .recipe-compo:hover {
@@ -338,16 +338,15 @@ header {
 
 .recipe-compo h2 {
   font-size: 24px;
-  margin-bottom: 10px;
+  font-weight: bold;
   color: #333;
+  margin-top: 0;
 }
 
 .recipe-compo img {
-  width: 100%;
-  max-width: 400px;
+  max-width: 80%;
   height: auto;
-  display: block;
-  margin: 0 auto 20px;
+  margin-bottom: 10px;
 }
 
 .recipe-compo button {
@@ -365,27 +364,6 @@ header {
 
 .recipe-compo button:hover {
   background-color: #8f9caa;
-}
-
-.recipe-compo h3 {
-  font-size: 20px;
-  margin-bottom: 10px;
-  color: #555;
-}
-
-.recipe-compo ul,
-.recipe-compo ol {
-  margin-bottom: 15px;
-}
-
-.recipe-compo li {
-  font-size: 16px;
-  color: #777;
-  margin-left: 20px;
-}
-
-.recipe-compo ol {
-  list-style-type: decimal;
 }
 
 
