implement retrieveMovements logic, test and handler in api #446; implement editSequence logic in app #443

--- a/staff/anna-cuenca/project/app/src/index.css
+++ b/staff/anna-cuenca/project/app/src/index.css
@@ -8,7 +8,7 @@
 
 
   .custom-background {
-    @apply bg-[url('/fondoApp3.webp')] h-screen bg-cover bg-center;
+    @apply bg-[url('/wallpaperGreen.png')] h-screen bg-cover bg-center;
   }
 
   /* Base modifications for a robot-themed app */
