--- a/staff/anna-cuenca/project/app/src/index.css
+++ b/staff/anna-cuenca/project/app/src/index.css
@@ -98,4 +98,22 @@
   .tutorial {
     @apply border-2 border-solid border-green-200 rounded-lg shadow-md p-4 mb-4 bg-green-50;
   }
+
+  @layer components {
+    .popup-container {
+      @apply fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-10;
+    }
+
+    .popup {
+      @apply bg-green-500 p-4 rounded-lg shadow-lg text-white max-w-sm mx-auto;
+    }
+
+    .popup ul {
+      @apply list-none p-0;
+    }
+
+    .popup li {
+      @apply border-2 border-black p-2 rounded-md mb-2;
+    }
+  }
 }
