--- a/staff/tano-aleu/project/app/src/index.css
+++ b/staff/tano-aleu/project/app/src/index.css
@@ -21,7 +21,7 @@
   }
 
   .button {
-    @apply border-[2px] border-solid border-black font-bold text-white rounded-3xl p-2 ;
+    @apply border-[2px] border-solid border-black font-bold text-white rounded-3xl p-2 mr-3 ml-3 ;
     
   }
   .login-register-button {
@@ -43,7 +43,7 @@
   /* custom */
 
   .footer {
-    @apply bg-purple-300 flex items-center justify-between p-[.5rem] fixed bottom-0 w-full min-h-[3rem];
+    @apply bg-purple-300 flex items-center justify-between p-[.5rem] fixed bottom-0 w-full;
   }
 
   /* Feedback */
